Updates go bashprofile and gitconfig

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,26 +1,13 @@
 [user]
-	name = Zach Riggle
-    email = zachriggle@gmail.com
-[core]
-    editor = vi
+	name = zachriggle
+    email = zach@riggle.me
+[github]
+    user = zachriggle
+[apply]
+	whitespace = nowarn
 [alias]
     lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr)%Creset' --abbrev-commit --date=relative
 [color]
 	branch = auto
 	diff = auto
 	status = auto
-[color "branch"]
-	current = yellow reverse
-	local = yellow 
-	remote = green
-[color "diff"]
-	meta = yellow bold
-	frag = magenta bold
-	old = red bold
-	new = green bold
-[color "status"]
-	added = yellow
-	changed = green
-	untracked = cyan
-	renamed = pink
-    
