--- a/.gitconfig
+++ b/.gitconfig
@@ -1,12 +1,13 @@
 [user]
 	name = zachriggle
-    email = zach@riggle.me
+	email = zach@riggle.me
 [github]
-    user = zachriggle
-[apply]
-	whitespace = nowarn
+	user = zachriggle
 [alias]
-    lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr)%Creset' --abbrev-commit --date=relative
+	lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr)%Creset' --abbrev-commit --date=relative
+[core]
+	excludesfile=~/.gitignore
+	autocrlf=input
 [color]
 	branch = auto
 	diff = auto
