Updated Makefile so that .depfile isn't made on 'clean'

--- a/c/Makefile
+++ b/c/Makefile
@@ -8,9 +8,11 @@ OUT ?= a.out
 
 # -- Directories --
 SRC ?= .
+INCLUDES = -I.
+LDFLAGS = -L.
 
 # -- Flags --
-CFLAGS		+= -ggdb -O0
+CFLAGS		+= -ggdb -O0 $(INCLUDES)
 
 # -- Input Files --
 C_FILES   = $(wildcard $(SRC)/*.c)
@@ -20,27 +22,41 @@ OBJ_FILES = $(patsubst %.c, %.o, $(C_FILES)) $(patsubst %.cpp, %.o, $(CPP_FILES)
 # -- Dependencies --
 DEPFILE = .depfile
 
-all: $(OBJ_FILES)
-	$(CC) $(CFLAGS) -o $(OUT) $<
+all: $(OUT)
 
+# Output file
+# =========================================================
 $(OUT): $(OBJ_FILES)
-	$(CXX) $< -p $@
+	@echo Building binary $@ from [ $< ]
+	$(CXX) $(LDFLAGS) $< -o $@
 
+# Compile source files
+# These rules are rewritten into the dependencies file
+# =========================================================
 .c.o:
-	$(CC) $(CFLAGS) $(INCLUDES) -c $< -o $@
+	@echo Compiling $@ from [ $< ]
+	$(CC) $(CFLAGS) -c $< -o $@
 
 .cpp.o:
-	$(CXX) $(CFLAGS) $(INCLUDES) -c $< -o $@
+	@echo Compiling $@ from [ $< ]
+	$(CXX) $(CFLAGS) -c $< -o $@
 
+# Generate dependencies.
+# =========================================================
 $(DEPFILE):
 	rm -f $(DEPFILE)
-	$(CC)  -E -MM $(CFLAGS) $(INCLUDES) $(C_FILES)   >> $(DEPFILE)
-	$(CXX) -E -MM $(CFLAGS) $(INCLUDES) $(CPP_FILES) >> $(DEPFILE)
+	$(CC)  -E -MM $(CFLAGS) $(INCLUDES) $(CPP_FILES) $(C_FILES) -MF $(DEPFILE)
 
 clean:
-	rm $(OUT) $(SRC)/*.o
+	rm -f $(OUT) $(SRC)/*.o $(DEPFILE)
 
--include $(DEPFILE)
+# Generated dependency file.  Note the dependencies on
+# $(DEPFILE)
+# =========================================================
+NODEPS:=clean tags svn
+ifeq (0, $(words $(findstring $(MAKECMDGOALS), $(NODEPS))))
+	-include $(DEPFILE)
+endif
 
 .SUFFIXES: .c .cpp
 .PHONY: all clean install
