Added 'if' statemment to filter -ggdb -O0 -DDEBUG=1 unless DEBUG=1

--- a/c/Makefile
+++ b/c/Makefile
@@ -12,7 +12,11 @@ INCLUDES = -I.
 LDFLAGS = -L.
 
 # -- Flags --
-CFLAGS		+= -ggdb -O0 $(INCLUDES)
+ifdef DEBUG
+	CFLAGS		+= -ggdb -O0 -DDEBUG=1
+	LDFLAGS		+= -ggdb -O0 -DDEBUG=1
+endif
+CFLAGS 		+= $(INCLUDES)
 
 # -- Input Files --
 C_FILES   = $(wildcard $(SRC)/*.c)
