--- a/.gitconfig
+++ b/.gitconfig
@@ -1,14 +1,26 @@
 [user]
-	name = zachriggle
+	name = Zach Riggle
 	email = zach@riggle.me
-[github]
-	user = zachriggle
 [alias]
-	lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr)%Creset' --abbrev-commit --date=relative
-[core]
-	excludesfile=~/.gitignore
-	autocrlf=input
+	lg = log --all --graph --pretty=format:'%Cred%h%Creset -%C(cyan)%d%Creset %s %Cgreen(%cr)%Creset - %aN' --abbrev-commit --date=relative
 [color]
 	branch = auto
 	diff = auto
 	status = auto
+[color "branch"]
+	current = yellow reverse
+	local = yellow 
+	remote = red
+[color "diff"]
+	meta = yellow bold
+	frag = magenta bold
+	old = red bold
+	new = green bold
+[color "status"]
+	added = yellow
+	changed = green
+	untracked = cyan
+	renamed = pink
+[core]
+	autocrlf = false
+	eof = lf
