--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "pwntools"]
 	path = pwntools
 	url = https://github.com/pwnies/pwntools.git
+[submodule ".bash_it"]
+	path = .bash_it
+	url = https://github.com/revans/bash-it.git
