--- a/.uncrustify.cfg
+++ b/.uncrustify.cfg
@@ -72,7 +72,7 @@ indent_braces                            = false    # false/true
 indent_braces_no_func                    = false    # false/true
 
 # Disabled indenting class braces if indent_braces is true
-indent_braces_no_class           s        = false    # false/true
+indent_braces_no_class                   = false    # false/true
 
 # Disabled indenting struct braces if indent_braces is true
 indent_braces_no_struct                  = false    # false/true
@@ -1025,7 +1025,7 @@ nl_switch_brace                          = add   # ignore/add/remove/force
 
 # Add a newline between ')' and '{' if the ')' is on a different line than the if/for/etc.
 # Overrides nl_for_brace, nl_if_brace, nl_switch_brace, nl_while_switch, and nl_catch_brace.
-nl_multi_line_cond                       = add    # false/true
+nl_multi_line_cond                       = true    # false/true
 
 # Force a newline in a define after the macro name for multi-line defines.
 nl_multi_line_define                     = true    # false/true
@@ -1037,7 +1037,7 @@ nl_before_case                           = false    # false/true
 nl_before_throw                          = ignore   # ignore/add/remove/force
 
 # Whether to put a newline after 'case' statement
-nl_after_case                            = add    # false/true
+nl_after_case                            = true    # false/true
 
 # Add or remove a newline between a case ':' and '{'. Overrides nl_after_case.
 nl_case_colon_brace                      = add   # ignore/add/remove/force
