Fixed func call wrapping

--- a/.uncrustify.cfg
+++ b/.uncrustify.cfg
@@ -121,22 +121,22 @@ indent_func_def_force_col1               = false    # false/true
 
 # True:  indent continued function call parameters one indent level
 # False: align parameters under the open paren
-indent_func_call_param                   = true    # false/true
+indent_func_call_param                   = false    # false/true
 
 # Same as indent_func_call_param, but for function defs
-indent_func_def_param                    = true    # false/true
+indent_func_def_param                    = false    # false/true
 
 # Same as indent_func_call_param, but for function protos
-indent_func_proto_param                  = true    # false/true
+indent_func_proto_param                  = false    # false/true
 
 # Same as indent_func_call_param, but for class declarations
-indent_func_class_param                  = true    # false/true
+indent_func_class_param                  = false    # false/true
 
 # Same as indent_func_call_param, but for class variable constructors
-indent_func_ctor_var_param               = true    # false/true
+indent_func_ctor_var_param               = false    # false/true
 
 # Same as indent_func_call_param, but for templates
-indent_template_param                    = true    # false/true
+indent_template_param                    = false    # false/true
 
 # Double the indent for indent_func_xxx_param options
 indent_func_param_double                 = false    # false/true
@@ -1215,7 +1215,7 @@ nl_create_while_one_liner                = false    # false/true
 #
 
 # The position of arithmetic operators in wrapped expressions
-pos_arith                                = ignore   # ignore/join/lead/lead_break/lead_force/trail/trail_break/trail_force
+pos_arith                                = lead   # ignore/join/lead/lead_break/lead_force/trail/trail_break/trail_force
 
 # The position of assignment in wrapped expressions.
 # Do not affect '=' followed by '{'
