--- a/.uncrustify.cfg
+++ b/.uncrustify.cfg
@@ -671,7 +671,7 @@ sp_cond_colon                            = add   # ignore/add/remove/force
 sp_cond_question                         = add   # ignore/add/remove/force
 
 # Fix the spacing between 'case' and the label. Only 'ignore' and 'force' make sense here.
-sp_case_label                            = ignore   # ignore/add/remove/force
+sp_case_label                            = force   # ignore/add/remove/force
 
 # Control the space around the D '..' operator.
 sp_range                                 = ignore   # ignore/add/remove/force
@@ -742,7 +742,7 @@ align_var_def_star_style                 = 2        # number
 align_var_def_amp_style                  = 2        # number
 
 # The threshold for aligning variable definitions (0=no limit)
-align_var_def_thresh                     = 0        # number
+align_var_def_thresh                     = 5        # number
 
 # The gap for aligning variable definitions
 align_var_def_gap                        = 1       # number
@@ -760,7 +760,7 @@ align_var_def_inline                     = true    # false/true
 align_assign_span                        = 5        # number
 
 # The threshold for aligning on '=' in assignments (0=no limit)
-align_assign_thresh                      = 0       # number
+align_assign_thresh                      = 15       # number
 
 # The span for aligning on '=' in enums (0=don't align)
 align_enum_equ_span                      = 10        # number
@@ -778,7 +778,7 @@ align_var_struct_thresh                  = 10        # number
 align_var_struct_gap                     = 1        # number
 
 # The span for aligning struct initializer values (0=don't align)
-align_struct_init_span                   = 5        # number
+align_struct_init_span                   = 0        # number
 
 # The minimum space between the type and the synonym of a typedef
 align_typedef_gap                        = 1       # number
@@ -1037,10 +1037,10 @@ nl_before_case                           = false    # false/true
 nl_before_throw                          = ignore   # ignore/add/remove/force
 
 # Whether to put a newline after 'case' statement
-nl_after_case                            = true    # false/true
+nl_after_case                            = false    # false/true
 
 # Add or remove a newline between a case ':' and '{'. Overrides nl_after_case.
-nl_case_colon_brace                      = add   # ignore/add/remove/force
+nl_case_colon_brace                      = ignore   # ignore/add/remove/force
 
 # Newline between namespace and {
 nl_namespace_brace                       = add   # ignore/add/remove/force
@@ -1052,7 +1052,7 @@ nl_template_class                        = add   # ignore/add/remove/force
 nl_class_brace                           = add   # ignore/add/remove/force
 
 # Add or remove newline after each ',' in the constructor member initialization
-nl_class_init_args                       = add   # ignore/add/remove/force
+nl_class_init_args                       = ignore  # ignore/add/remove/force
 
 # Add or remove newline between return type and function name in a function definition
 nl_func_type_name                        = add   # ignore/add/remove/force
@@ -1125,7 +1125,7 @@ nl_after_semicolon                       = true    # false/true
 
 # Whether to put a newline after brace open.
 # This also adds a newline before the matching brace close.
-nl_after_brace_open                      = true    # false/true
+nl_after_brace_open                      = false    # false/true
 
 # If nl_after_brace_open and nl_after_brace_open_cmt are true, a newline is
 # placed between the open brace and a trailing single-line comment.
@@ -1149,7 +1149,7 @@ nl_after_vbrace_close                    = false    # false/true
 
 # Control the newline between the close brace and 'b' in: 'struct { int a; } b;'
 # Affects enums, unions, and structures. If set to ignore, uses nl_after_brace_close
-nl_brace_struct_var                      = ignore   # ignore/add/remove/force
+nl_brace_struct_var                      = remove   # ignore/add/remove/force
 
 # Whether to alter newlines in '#define' macros
 nl_define_macro                          = false    # false/true
@@ -1269,13 +1269,13 @@ nl_after_func_proto                      = 3        # number
 nl_after_func_proto_group                = 0        # number
 
 # The number of newlines after '}' of a multi-line function body
-nl_after_func_body                       = 0        # number
+nl_after_func_body                       = 4        # number
 
 # The number of newlines after '}' of a multi-line function body in a class declaration
-nl_after_func_body_class                 = 0        # number
+nl_after_func_body_class                 = 4        # number
 
 # The number of newlines after '}' of a single line function body
-nl_after_func_body_one_liner             = 0        # number
+nl_after_func_body_one_liner             = 4        # number
 
 # The minimum number of newlines before a multi-line comment.
 # Doesn't apply if after a brace open or another multi-line comment.
@@ -1339,7 +1339,7 @@ eat_blanks_before_close_brace            = false    # false/true
 nl_remove_extra_newlines                 = 0        # number
 
 # Whether to put a blank line before 'return' statements, unless after an open brace.
-nl_before_return                         = true    # false/true
+nl_before_return                         = false    # false/true
 
 # Whether to put a blank line after 'return' statements, unless followed by a close brace.
 nl_after_return                          = false    # false/true
