--- a/.uncrustify.cfg
+++ b/.uncrustify.cfg
@@ -1052,7 +1052,7 @@ nl_template_class                        = add   # ignore/add/remove/force
 nl_class_brace                           = add   # ignore/add/remove/force
 
 # Add or remove newline after each ',' in the constructor member initialization
-nl_class_init_args                       = ignore  # ignore/add/remove/force
+nl_class_init_args                       = add  # ignore/add/remove/force
 
 # Add or remove newline between return type and function name in a function definition
 nl_func_type_name                        = add   # ignore/add/remove/force
@@ -1196,7 +1196,7 @@ nl_ds_struct_enum_close_brace            = false    # false/true
 
 # Add or remove a newline around a class colon.
 # Related to pos_class_colon, nl_class_init_args, and pos_comma.
-nl_class_colon                           = ignore   # ignore/add/remove/force
+nl_class_colon                           = remove   # ignore/add/remove/force
 
 # Change simple unbraced if statements into a one-liner
 # 'if(b)\n i++;' => 'if(b) i++;'
@@ -1237,7 +1237,7 @@ pos_comma                                = trail   # ignore/join/lead/lead_break
 pos_class_comma                          = trail   # ignore/join/lead/lead_break/lead_force/trail/trail_break/trail_force
 
 # The position of colons between constructor and member initialization
-pos_class_colon                          = ignore   # ignore/join/lead/lead_break/lead_force/trail/trail_break/trail_force
+pos_class_colon                          = join   # ignore/join/lead/lead_break/lead_force/trail/trail_break/trail_force
 
 #
 # Line Splitting options
