--- a/.gitmodules
+++ b/.gitmodules
@@ -9,4 +9,4 @@
 	url = https://github.com/rapid7/metasploit-framework.git
 [submodule ".zprezto"]
 	path = .zprezto
-	url = git@github.com:zachriggle/prezto.git
+	url = https://github.com/zachriggle/prezto.git
