--- a/.config/compiz-1/compizconfig/Default.ini
+++ b/.config/compiz-1/compizconfig/Default.ini
@@ -10,7 +10,7 @@ s0_icon_only = true
 s0_speed = 5.000000
 s0_timestep = 0.100000
 s0_brightness = 100
-s0_zoom = 3.000000
+s0_zoom = 0.000000
 s0_auto_rotate = true
 
 [grid]
@@ -23,6 +23,8 @@ s0_put_restore_key = <Super>Down
 s0_put_next_output_key = <Control><Super>Left
 s0_put_previous_output_key = <Control><Super>Right
 s0_avoid_offscreen = true
+s0_speed = 9.600000
+s0_timestep = 0.100000
 
 [place]
 s0_multioutput_mode = 1
@@ -31,4 +33,9 @@ s0_mode = 5
 [resize]
 s0_mode = 1
 s0_border_color = #4b4b4b9f
+
+[scale]
+s0_initiate_key = <Shift><Control>w
+s0_spacing = 0
+s0_overlay_icon = 1
 
