More more compiz

--- a/.config/compiz-1/compizconfig/Default.ini
+++ b/.config/compiz-1/compizconfig/Default.ini
@@ -35,7 +35,7 @@ s0_mode = 1
 s0_border_color = #4b4b4b9f
 
 [scale]
-s0_initiate_key = <Shift><Control>w
+s0_initiate_key = <Super>Tab
 s0_spacing = 0
 s0_overlay_icon = 1
 
