--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,13 +1,22 @@
 setw -g mode-mouse on
+
 set-option -g mouse-select-pane on
+set-option -g mouse-resize-pane on
+set-option -g mouse-select-window on
+set-window-option -g mode-mouse on
+
 set-option -g set-titles on
 set-option -g set-titles-string '#H:#S.#I.#P #W #T' # window number,program name, active(or not)
+
 set-option -g bell-action any
 set-option -g visual-bell on
+
 set -g base-index 1
 setw -g aggressive-resize on
+
 bind-key r source-file ~/.tmux.conf
 bind-key S command-prompt -p ssh: "new-window -n %1 'ssh %1'"
 bind-key | split-window -h
 bind-key - split-window -v
+
 set -g default-terminal "screen-256color"
