Fix mouse in SSH

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,9 @@
-setw -g mode-mouse on
 
-set-option -g mouse-select-pane on
-set-option -g mouse-resize-pane on
+set-option -g mouse-mode          on
+set-option -g mouse-select-pane   on
+set-option -g mouse-resize-pane   on
 set-option -g mouse-select-window on
-set-window-option -g mode-mouse on
+set-window-option -g mode-mouse   on
 
 set-option -g set-titles on
 set-option -g set-titles-string '#H:#S.#I.#P #W #T' # window number,program name, active(or not)
