--- a/.inputrc
+++ b/.inputrc
@@ -1,3 +1,7 @@
 set show-all-if-ambiguous on
 set completion-ignore-case on
 set bell-style visible
+
+set meta-flag on
+set output-meta on
+set convert-meta off
