--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,3 @@
-
 set-option -g mouse-mode          on
 set-option -g mouse-select-pane   on
 set-option -g mouse-resize-pane   on
@@ -12,6 +11,7 @@ set-option -g bell-action any
 set-option -g visual-bell on
 
 set -g base-index 1
+set-window-option -g pane-base-index 1
 setw -g aggressive-resize on
 
 bind-key r source-file ~/.tmux.conf
