--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-set-option -g mouse-mode          on
+# set -g mouse-mode          on
 set-option -g mouse-select-pane   on
 set-option -g mouse-resize-pane   on
 set-option -g mouse-select-window on
