Compiz focus for nautilus from cmdline; create windows under cursor

--- a/.config/compiz-1/compizconfig/Default.ini
+++ b/.config/compiz-1/compizconfig/Default.ini
@@ -1,6 +1,7 @@
 [core]
 s0_active_plugins = core;composite;opengl;copytex;decor;compiztoolbox;wall;place;grid;commands;snap;move;vpswitch;resize;put;imgpng;session;regex;mousepoll;animation;fade;expo;workarounds;scale;ezoom;
 s0_outputs = 2245x1287+0+0;
+s0_focus_prevention_level = 0
 
 [put]
 s0_put_next_output_key = <Control><Super>Left
@@ -19,4 +20,7 @@ s0_put_restore_key = <Super>Down
 s0_initiate_all_key = <Super>Tab
 s0_spacing = 0
 s0_overlay_icon = 1
+
+[place]
+s0_mode = 5
 
