fix eclipse shortcut

--- a/.config/xfce4/panel/launcher-18/13981383284.desktop
+++ b/.config/xfce4/panel/launcher-18/13981383284.desktop
@@ -3,7 +3,9 @@ Type=Application
 Name=Eclipse
 Comment=Eclipse Integrated Development Environment
 Icon=eclipse
-Exec=eclipse
+Exec=/home/user/eclipse/eclipse
 Terminal=false
 Categories=Development;IDE;Java;
 X-XFCE-Source=file:///usr/share/applications/eclipse.desktop
+Path=/home/user/eclipse
+StartupNotify=false
