--- a/.config/compiz-1/compizconfig/Default.ini
+++ b/.config/compiz-1/compizconfig/Default.ini
@@ -1,6 +1,6 @@
 [core]
-s0_active_plugins = core;composite;opengl;copytex;decor;compiztoolbox;wall;place;grid;commands;snap;move;vpswitch;resize;put;imgpng;session;regex;mousepoll;animation;fade;expo;workarounds;scale;ezoom;
-s0_outputs = 2245x1287+0+0;
+s0_active_plugins = core;composite;opengl;decor;wall;compiztoolbox;regex;vpswitch;put;place;commands;resize;session;snap;grid;imgpng;move;copytex;mousepoll;animation;workarounds;expo;fade;scale;ezoom;switcher;
+s0_outputs = 2560x1440+1920+0;1920x1200+0+141;1920x1200+4480+141;
 s0_focus_prevention_level = 0
 
 [put]
@@ -23,4 +23,8 @@ s0_overlay_icon = 1
 
 [place]
 s0_mode = 5
+
+[switcher]
+s0_icon_only = true
+s0_zoom = 2.000000
 
