--- a/.gitmodules
+++ b/.gitmodules
@@ -18,4 +18,4 @@
 	url = git://github.com/sstephenson/rbenv.git
 [submodule "peda"]
 	path = peda
-	url = https://github.com/longld/peda.git
+	url = https://github.com/zachriggle/peda.git
