Fix FreeBSD borders

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -53,3 +53,7 @@ set-option -g display-panes-colour colour166 #orange
 # clock
 set-window-option -g clock-mode-colour colour64 #green
 
+# tmux => UTF-8
+setw -g utf8 on
+set -g status-utf8 on
+
