--- a/.config/compiz-1/compizconfig/Default.ini
+++ b/.config/compiz-1/compizconfig/Default.ini
@@ -4,8 +4,8 @@ s0_outputs = 2560x1440+1920+0;1920x1200+0+141;1920x1200+4480+141;
 s0_focus_prevention_level = 0
 
 [put]
-s0_put_next_output_key = <Control><Super>Left
-s0_put_previous_output_key = <Control><Super>Right
+s0_put_next_output_key = <Control><Super>Right
+s0_put_previous_output_key = <Control><Super>Left
 s0_avoid_offscreen = true
 s0_speed = 10.000000
 s0_timestep = 0.100000
